# openexecution-oe

./: .gitignore  Cargo.toml  LICENSE  README.md
.VSCodeCounter/2023-06-17_15-33-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
dockerized/: Dockerfile  README.md  default.env  docker-compose.yml
dockerized/scripts/: init.sh
src/: main.rs  types.rs
